--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/icon": "^1.2.1",
     "@nuxt/image": "^1.7.0",
+    "@nuxtjs/robots": "^4.0.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.4",
     "papaparse": "^5.4.1",
