--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
             cd /var/www/html/revyformation &&
             git pull origin master &&
             npm install &&
-            npm run build
+            npm run build && pm2 restart ecosystem.config.mjs
           "
